# rusty_connect

./: Cargo.toml
.github/: update_cargo_toml.py
.github/workflows/: build_releases.yml
examples/: main.rs
rusty-connect-tauri/: Cargo.toml  index.html  rustfmt.toml  styles.scss
rusty-connect-tauri/api/: Cargo.toml
rusty-connect-tauri/api/gql/: queries.graphql  schema.graphql
rusty-connect-tauri/api/src/: lib.rs
rusty-connect-tauri/css/: all.css
rusty-connect-tauri/src/: app.rs  device.rs  device_list.rs  file_progress.rs  invoke.rs  main.rs
rusty-connect-tauri/src-tauri/: Cargo.toml  tauri.conf.json
rusty-connect-tauri/src-tauri/src/: gql_subscription.rs  main.rs  server.rs
rusty-connect-tauri/src-tauri/src/plugins/: battery.rs  clipboard.rs  mod.rs  ping.rs  share.rs
rusty-connect-tauri/src-tauri/src/state/: mod.rs
rusty-connect-tauri/src-tauri/src/system_tray/: mod.rs
rusty-connect-tauri/src/components/: mod.rs  switch.rs
rusty_connect/: .gitignore  Cargo.toml
rusty_connect/example_configs/: cert  cert.pem  devices  key  key.pem
rusty_connect/examples/: main.rs
rusty_connect/src/: lib.rs
rusty_connect/src/cert/: certgen.rs  mod.rs  no_veifier.rs
rusty_connect/src/devices/: mod.rs
rusty_connect/src/network/: mod.rs
rusty_connect/src/payloads/: mod.rs
rusty_connect/src/plugins/: battery.rs  clipboard.rs  mod.rs  mousepad.rs  notification.rs  ping.rs  share.rs
rusty_connect/src/schema/: mod.rs  mutation.rs  subscription.rs
src/: lib.rs
src/devices/: mod.rs
src/payloads/: mod.rs
src/plugins/: mod.rs  ping.rs
src/schema/: mutation.rs  query.rs  subscription.rs
src/utils/: mod.rs
