[package]
name = "rusty-connect-tauri-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6.9", features = ["csr"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
api = { path = "api", default-feature = false, features = ["leptos", "wasm"] }
log = "0.4.21"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
leptos_router = { version = "0.6.9", features = ["csr"] }

# [workspace]
# members = ["api", "src-tauri"]
