[package]
name = "rusty_connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-graphql = "7.0.2"
flume = "0.11.0"
futures = "0.3.30"
paste = "1.0.14"
rcgen = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = [
    "fs",
    "net",
    "rt",
    "io-util",
    "sync",
] }
# tokio-rustls = "0.25.0"
tokio-native-tls = "0.3.1"
tracing = "0.1.40"
async-graphql-axum = "7.0.2"
axum = "0.7.4"
async-stream = "0.3.5"
uuid = { version = "1.7.0", features = ["v4"] }
mdns-sd = { version = "0.10" }
hostname = "^0.3"
base64 = "0.22.0"
rand = "0.8.5"
rsa = "0.9.6"
tower-http = { version = "0.5.2", features = ["fs"] }
socket2 = "0.5.6"
enigo = "0.1.3"
phf = { version = "0.11.2", features = ["phf_macros", "macros"] }
# mouse-rs = "0.4.2"
# pkix = "0.2.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }
