[package]
name = "rusty-connect-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "notification-all",
    "system-tray",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
rusty_connect = { path = "../../rusty_connect" }
uuid = { version = "1.7.0", features = ["v4"] }
tracing = "0.1.40"
graphql-ws-client = { version = "=0.8.0-rc.2", features = [
    "async-tungstenite",
    "graphql_client",
    "client-graphql-client",
] }
graphql_client = { version = "0.13.0", features = ["reqwest"] }
async-tungstenite = { version = "0.25.0", features = ["tokio-runtime"] }
futures = "0.3.30"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
flume = "0.11.0"
api = { path = "../api", features = ["host"] }
reqwest = "0.11.25"
once_cell = "1.19.0"
clipboard = "0.5.0"
battery = "0.7.8"
# notify-rust = "4.10.0" //TODO: use notify-rust with proper os checking

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.25.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
